﻿A changelog for recent builds as pasted into the sourceforge page.

Generally created by hand after running:
   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Note that, baring some major issue building and cutting the release, build
228 will be the last version supporting Python 2.


Since build 228:
----------------
* Fixed a bug where win32com.client.VARIANT params were returned in the reverse
  order. This only happened when win32com.client.VARIANT was explicitly used
  (ie, not when normal params were passed) For example:
  ```python
      arg1 = VARIANT(pythoncom.VT_R4 | pythoncom.VT_BYREF, 2.0)
      arg2 = VARIANT(pythoncom.VT_BOOL | pythoncom.VT_BYREF, True)
      object.SomeFunction(arg1, arg2)
  ```
  after this call, `arg1.value` was actually the value for `arg2`, and
  vice-versa (#1303, #622).

* Fixed a bug that Pythonwin had an empty `sys.argv` (@kxrob in #1607)

* Fixed a bug that prevented win32process.ReadProcessMemory() from working
  in all scenarios (#1599)

* Changed how Services implemented with win32serviceutil.ServiceFramework
  report that they have stopped. Now if the SvcRun() method (or the SvcDoRun()
  method, which is called by SvcRun() by default) raises on Exception,
  the Service will report a final SERVICE_STOPPED status with a non-zero error
  code. This will cause the Service's recovery actions to be triggered if the
  Service has the "Enable actions for stops with errors" option enabled.
  (#1563, Lincoln Puzey)

* adodbapi connect() method now accepts a "mode" keyword argument which is the
  "Mode" property to set on the ADO "Connection" object before opening the
  Connection. See "ConnectModeEnum" for valid values.
  (Lincoln Puzey)

* The Windows 10 SDK is now used to build the project. This shouldn't cause any
  visible changes, but should make it much easier to build the project yourself.

Python 2 is no longer supported - so long, Python 2, you served us well!
